# weni-integrations-engine

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-entrypoint.sh  dump.rdb  gunicorn.conf.py  manage.py  pyproject.toml  test.py  test.txt  test_img.txt  text.txt
.github/workflows/: build-integrations-engine-develop.yaml  build-integrations-engine-dispatch-SHARED.yaml  build-integrations-engine-dispatch-shared.yaml  build-integrations-engine-push-tag-shared.yaml  build-integrations-engine-staging.yaml  build-marketplace-engine-develop.yaml  ci.yml
contrib/: code_check.py  compare_coverage.py  gen_env.py
docker/: Dockerfile  docker-compose.yml  start
marketplace/: asgi.py  celery.py  settings.py  swagger.py  urls.py  wsgi.py
marketplace/accounts/: admin.py  apps.py  authorizations.py  backends.py  handle.py  mixins.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
marketplace/apis/: urls.py
marketplace/applications/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
marketplace/clients/: base.py  decorators.py  exceptions.py
marketplace/connect/: client.py  tasks.py
marketplace/core/: apps.py  fields.py  models.py  serializers.py  storage.py  validators.py
marketplace/event_driven/: apps.py  consumers.py  handle.py  publishers.py  signals.py
marketplace/flows/: client.py
marketplace/grpc/: client.py  urls.py
marketplace/interactions/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
marketplace/interfaces/: connect.py  flows.py
marketplace/internal/: apps.py  authenticators.py  backends.py  jwt_authenticators.py  jwt_mixins.py  permissions.py  urls.py  views.py
marketplace/jwt_keys/: public_key.pem
marketplace/onpremise/: apis.py  apps.py  exceptions.py  facades.py  queue.py  tasks.py
marketplace/projects/: apps.py  handle.py  models.py
marketplace/webhooks/: urls.py
marketplace/wpp_products/: apps.py  models.py  parsers.py  serializers.py  tasks.py  utils.py
marketplace/wpp_templates/: apps.py  (+12 more)
(+498 files in other folders)
