[tool.poetry]
name = "marketplace"
version = "1.5.0"
description = "Marketplace engine"
authors = ["Weni"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.2.4"
django-environ = "0.4.5"
psycopg2 = "^2.8.6"
boto3 = "^1.17.107"
djangorestframework = "^3.12.4"
gunicorn = "^20.1.0"
mozilla-django-oidc = "^2.0.0"
drf-nested-routers = "^0.93.3"
django-storages = "^1.11.1"
django-cors-headers = "^3.8.0"
grpcio = "^1.39.0"
celery = "^5.1.2"
redis = "^3.5.3"
Pillow = "^8.3.1"
sentry-sdk = "^1.3.1"
grpcio-tools = "^1.40.0"
djangogrpcframework = "^0.2.1"
weni-protobuffers = "1.2.14"
python-decouple = "^3.5"
django-redis = "^5.2.0"
drf-yasg = "^1.20.0"
phonenumbers = "^8.12.47"
click = "7.1.2"
elastic-apm = "^6.10.1"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
flake8 = "^3.9.2"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
